<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <!-- A CardView that contains a TextView -->
<androidx.cardview.widget.CardView
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    card_view:cardCornerRadius="15dp"
    android:layout_marginTop="20dp">


<TextView
    android:id="@+id/grade1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/grade1"
    android:textSize="30sp"
    android:textStyle="bold"
    android:paddingTop="10dp"
    android:layout_marginTop="10dp"
    android:paddingLeft="20dp"
    android:layout_marginLeft="10dp"/>
</androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        card_view:cardCornerRadius="15dp"
        android:layout_marginTop="20dp">


        <TextView
            android:id="@+id/grade2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/grade2"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view3"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        card_view:cardCornerRadius="15dp">
<!--        android:layout_marginTop="20dp">-->


        <TextView
            android:id="@+id/grade3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/grade3"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20sp"/>
    </androidx.cardview.widget.CardView>

    </LinearLayout>