<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".PreGradeTwoSubjects">

    <!-- A CardView that contains a TextView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/pretwocard_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        card_view:cardCornerRadius="15dp"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:maxHeight="100dp"
                android:src="@drawable/bookicon"
                android:layout_alignParentLeft="true"/>


            <TextView
                android:id="@+id/pretwosubject1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pre_two_sub1"
                android:textSize="25sp"
                android:textStyle="bold"
                android:paddingTop="20dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="50dp"
                android:layout_marginLeft="100dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/pretwocard_view2"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        card_view:cardCornerRadius="15dp"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:maxHeight="100dp"
                android:src="@drawable/bookicon"
                android:layout_alignParentLeft="true"/>



            <TextView
                android:id="@+id/pretwosubject2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pre_two_sub2"
                android:textSize="25sp"
                android:textStyle="bold"
                android:paddingTop="20dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="50dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/pretwocard_view3"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        card_view:cardCornerRadius="15dp"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:maxHeight="100dp"
                android:src="@drawable/bookicon"
                android:layout_alignParentLeft="true"/>



            <TextView
                android:id="@+id/pretwosubject3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pre_two_sub3"
                android:textSize="25sp"
                android:textStyle="bold"
                android:paddingTop="20dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="50dp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/pretwocard_view4"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        card_view:cardCornerRadius="15dp"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:maxHeight="100dp"
                android:src="@drawable/bookicon"
                android:layout_alignParentLeft="true"/>



            <TextView
                android:id="@+id/pretwosubject4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pre_two_sub4"
                android:textSize="25sp"
                android:textStyle="bold"
                android:paddingTop="20dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="50dp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/pretwocard_view5"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        card_view:cardCornerRadius="15dp"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:maxHeight="100dp"
                android:src="@drawable/bookicon"
                android:layout_alignParentLeft="true"/>



            <TextView
                android:id="@+id/pretwosubject5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pre_two_sub5"
                android:textSize="25sp"
                android:textStyle="bold"
                android:paddingTop="20dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="50dp"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="5dp">

        <Button
            android:id="@+id/button1"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_margin="5dp"
            android:background="@drawable/round_edges_button"/>
        <Button
            android:id="@+id/button2"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_margin="5dp"
            android:background="@drawable/round_edges_button"/>

    </LinearLayout>
</LinearLayout>